--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,12 @@ body {
     z-index: 1000;
   }
   
-  .logo {
-    font-weight: bold;
-    font-size: 1.2rem;
+  header img {
+    height: 80px; /* Ajusta este valor según lo pequeño que quieras el logo */
+    width: auto;
+    margin-right: 10px;
   }
+    
   
   .nav-menu ul {
     display: flex;
@@ -720,4 +722,26 @@ tr:hover {
   .info-extra {
     font-size: 0.8em;
   }
+}
+
+
+#btn-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 10px 14px;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  display: none;
+  z-index: 1000;
+  transition: background-color 0.3s
+}
+
+#btn-top:hover {
+  background-color: #0056b3
 }
