--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,13 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
+main{
+  flex: 1;
+}
 /* Fondo difuminado con imagen fija */
 body {
   margin: 0;
