--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ body {
     aspect-ratio: 1 / 1;
     position: relative;
     transform-style: preserve-3d;
-    overflow: hidden;
+    overflow: visible;
   }
   .card img {
     width: 100%;
@@ -164,17 +164,14 @@ body {
     max-height: 100%; /* Evita que la imagen se desborde */
   }
   
-  
-  
   .card-inner {
     position: relative;
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
     transition: transform 0.8s ease;
-   
   }
-    .card:hover .card-inner {
+  .card:hover .card-inner {
     transform: rotateY(180deg);
   }
   .card-front, .card-back {
@@ -197,7 +194,6 @@ body {
     max-width: 100%;
     height: auto;
   }
-  
   .card-back {
     transform: rotateY(180deg);
     text-align: center;
