--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,8 @@ body {
   
   
   #contenedor-tarjetas {
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -583,6 +585,8 @@ table {
 
 
 #contenedor-tarjetas {
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
